Fix the side scroll effect on mobile

--- a/src/style/sass/index.scss
+++ b/src/style/sass/index.scss
@@ -11,7 +11,7 @@
 }
 
 body {
-  overflow-x: hidden;
+  // overflow-x: hidden;
   font-size: $mid;
 }
 
